<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/id_toolbar"
        app:title="@string/app_name"
        app:navigationIcon="@drawable/left"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimary"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/welcome_to_register"
            android:textSize="25dp"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <EditText
                android:id="@+id/reg_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user"
                android:background="@drawable/shape_edit_text"
                android:padding="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />
            <EditText
                android:id="@+id/reg_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pwd"
                android:background="@drawable/shape_edit_text"
                android:inputType="textPassword"
                android:padding="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <EditText
                android:id="@+id/reg_password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pwdAgain"
                android:background="@drawable/shape_edit_text"
                android:inputType="textPassword"
                android:padding="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <EditText
                android:id="@+id/reg_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emailWord"
                android:background="@drawable/shape_edit_text"
                android:padding="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <EditText
                android:id="@+id/reg_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/verificationCode"
                android:background="@drawable/shape_edit_text"
                android:padding="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <TextView
                android:id="@+id/reg_errnoMessage"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/error"
                android:visibility="invisible"
                android:textColor="@color/red"
                android:textSize="16dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/getVerificationCode"
                android:background="@drawable/shape_login"
                android:layout_marginTop="10dp"
                android:id="@+id/reg_btn_code"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="#ffffff"
                android:textSize="20sp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_register"
                android:background="@drawable/shape_admit"
                android:layout_marginTop="10dp"
                android:id="@+id/reg_btn_sure"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="#ffffff"
                android:textSize="20sp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/backLogin"
                android:background="@drawable/shape_cancel"
                android:layout_marginTop="10dp"
                android:id="@+id/reg_btn_login"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="#ffffff"
                android:textSize="20sp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>