<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:text="@string/your_gestures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp" />

        <Button
            android:id="@+id/add_gesture_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_gesture"/>
    </LinearLayout>
    <TextView
        android:id="@+id/text_no_gestures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/no_gestures"/>

    <ListView
        android:id="@+id/gesture_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>